service.yml
apiVersion: v1
kind: Service
metadata:
  name: blog-post-microservice-frontend-svc
spec:
  destination:
    namespace: default
  type: LoadBalancer
  selector:
    app: blog-post-microservice-frontend
  ports:
    - port: 80
      targetPort: 80
