ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
spec:
  rules:
    - host: cloud-devops-project.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: blog-post-microservice-frontend
                port:
                  number: 80
